--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,15 @@
 services:
   - type: web
-    name: crypto-market-app
+    name: crypto-market-app  # You can change this to your app's name
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:$PORT app:socketio
-    plan: free
     envVars:
-      - key: SECRET_KEY
-        generateValue: true
-      - key: FLASK_APP
-        value: app.py
+      - key: FLASK_SECRET_KEY
+        generateValue: true  # Render will generate a random value
       - key: FLASK_ENV
         value: production
-      - key: PYTHON_VERSION
-        value: 3.9.0
+      - key: BINANCE_API_BASE_URL
+        value: https://data-api.binance.vision  # Use this base URL for market data
+      - key: BINANCE_WS_BASE_URL
+        value: wss://data-stream.binance.vision  # Use this base URL for websocket
