--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
+Flask==2.2.3
 Flask-Login==0.6.2
-Flask-WTF==1.1.1
-Flask-SocketIO==5.3.4
-Flask-Migrate==4.0.5
-python-dotenv==1.0.0
-requests==2.31.0
-websocket-client==1.6.1
+Flask-SocketIO==5.3.2
+python-socketio==5.7.2
+python-engineio==4.3.4
 eventlet==0.33.3
-gunicorn==21.2.0
-psycopg2-binary==2.9.7
-email-validator==2.0.0
-Werkzeug==2.3.7
-# Add the following for Render
-dnspython==2.4.2
+requests==2.28.2
+Werkzeug==2.2.3
+gunicorn==20.1.0
+numpy==1.24.2
+websocket-client==1.5.1
