--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: crypto-market-app
     env: python
+    runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:$PORT app:socketio
+    startCommand: gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:$PORT app:app
     envVars:
       - key: FLASK_SECRET_KEY
         generateValue: true
