--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
-Flask==2.2.3
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 Flask-Login==0.6.2
-Flask-SocketIO==5.3.2
-python-socketio==5.7.2
-python-engineio==4.3.4
-eventlet==0.33.3
-requests==2.28.2
-Werkzeug==2.2.3
-gunicorn==20.1.0
-numpy==1.24.2
-websocket-client==1.5.1
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
+Flask-Bcrypt==1.0.1
+Flask-Limiter==3.5.0
+email-validator==2.0.0
+pyotp==2.9.0
+qrcode==7.4.2
+requests==2.31.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+redis==5.0.1
+Pillow==10.1.0
+Flask-Caching==2.1.0
+itsdangerous==2.1.2
+Flask-Talisman==1.1.0
+Flask-Cors==4.0.0
+Werkzeug==2.3.7
+WTForms==3.0.1
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+SQLAlchemy==2.0.22
+alembic==1.12.1
+eventlet==0.33.3  # Added for your gunicorn worker class
