--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,7 @@ MarkupSafe==2.1.3
 SQLAlchemy==2.0.22
 alembic==1.12.1
 eventlet==0.33.3
-numpy==1.24.3  # Added this line
-pandas==2.0.3  # Added this line - often used with NumPy
+numpy==1.24.3
+pandas==2.0.3
+websocket-client==1.6.1  # Added this line
+
