--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,26 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-Migrate==4.0.5
-Flask-Bcrypt==1.0.1
-Flask-Limiter==3.5.0
-Flask-SocketIO==5.3.4
-email-validator==2.0.0
-pyotp==2.9.0
-qrcode==7.4.2
-requests==2.31.0
-python-dotenv==1.0.0
-gunicorn==21.2.0
-psycopg2-binary==2.9.9
-redis==5.0.1
-Pillow==10.1.0
-Flask-Caching==2.1.0
-itsdangerous==2.1.2
-Flask-Talisman==1.1.0
-Flask-Cors==4.0.0
-Werkzeug==2.3.7
-WTForms==3.0.1
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-SQLAlchemy==2.0.22
-alembic==1.12.1
-eventlet==0.33.3
-numpy==1.24.3
-pandas==2.0.3
-websocket-client==1.6.1  # Added this line
+# requirements.txt
+flask==2.0.1
+flask-login==0.5.0
+flask-sqlalchemy==2.5.1
+flask-migrate==3.1.0
+flask-socketio==5.1.1
+psycopg2-binary==2.9.1
+requests==2.26.0
+python-dotenv==0.19.0
+werkzeug==2.0.1
+gunicorn==20.1.0
+eventlet==0.33.0
+pymongo==4.0.1
+redis==4.1.0
+bcrypt==3.2.0
+pyjwt==2.3.0
+flask-cors==3.0.10
+flask-wtf==1.0.0
+email-validator==1.1.3
+markupsafe==2.0.1
+itsdangerous==2.0.1
+jinja2==3.0.1
+click==8.0.1
+six==1.16.0
+pytz==2021.3
 
