--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: BINANCE_WS_BASE_URL
         value: wss://data-stream.binance.vision
       - key: COINMARKETCAP_API_KEY
-        sync: false
+        value: bda79d78-5f5c-41c3-892e-3584b698e234
       - key: COINMARKETCAP_API_URL
         value: https://pro-api.coinmarketcap.com/v1
       - key: DATABASE_URL
@@ -66,7 +66,7 @@ services:
       - key: BINANCE_WS_BASE_URL
         value: wss://data-stream.binance.vision
       - key: COINMARKETCAP_API_KEY
-        sync: false
+        value: bda79d78-5f5c-41c3-892e-3584b698e234
       - key: COINMARKETCAP_API_URL
         value: https://pro-api.coinmarketcap.com/v1
       - key: DATABASE_URL
@@ -91,7 +91,7 @@ services:
       - key: MAIL_DEFAULT_SENDER
         value: noreply@cryptomarket.example.com
 
-# Redis instance for caching and session management
+  # Redis instance for caching and session management
   - type: redis
     name: crypto-market-redis
     ipAllowList:
@@ -106,3 +106,4 @@ databases:
     ipAllowList:
       - source: 0.0.0.0/0
         description: everywhere
+
