--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-# requirements.txt
 flask==2.0.1
 flask-login==0.5.0
 flask-sqlalchemy==2.5.1
+sqlalchemy==1.4.23  # Add this line to pin SQLAlchemy version
 flask-migrate==3.1.0
 flask-socketio==5.1.1
 psycopg2-binary==2.9.1
@@ -23,4 +23,3 @@ jinja2==3.0.1
 click==8.0.1
 six==1.16.0
 pytz==2021.3
-
