--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==2.0.1
 flask-login==0.5.0
 flask-sqlalchemy==2.5.1
-sqlalchemy==1.4.23  # Pin SQLAlchemy to a compatible version
+sqlalchemy==1.4.23
 flask-migrate==3.1.0
 flask-socketio==5.1.1
 psycopg2-binary==2.9.1
@@ -9,7 +9,9 @@ requests==2.26.0
 python-dotenv==0.19.0
 werkzeug==2.0.1
 gunicorn==20.1.0
-eventlet==0.33.0
+# Fix the eventlet and dnspython compatibility issue
+eventlet==0.30.2
+dnspython==2.1.0
 pymongo==4.0.1
 redis==4.1.0
 bcrypt==3.2.0
