--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,8 @@ services:
     env: python
     runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --worker-class eventlet -w 1 -b 0.0.0.0:$PORT app:app
+    # Change this line to remove eventlet worker class
+    startCommand: gunicorn -w 1 -b 0.0.0.0:$PORT wsgi:app
     healthCheckPath: /health
     envVars:
       - key: FLASK_SECRET_KEY
@@ -48,6 +49,9 @@ services:
         value: false
       - key: SESSION_USE_SIGNER
         value: true
+      # Add this environment variable to control WebSocket initialization
+      - key: USE_WEBSOCKETS
+        value: false
 
   # Worker for background tasks (optional - if you need background processing)
   - type: worker
@@ -90,6 +94,8 @@ services:
         sync: false
       - key: MAIL_DEFAULT_SENDER
         value: noreply@cryptomarket.example.com
+      - key: USE_WEBSOCKETS
+        value: false
 
   # Redis instance for caching and session management
   - type: redis
@@ -106,4 +112,3 @@ databases:
     ipAllowList:
       - source: 0.0.0.0/0
         description: everywhere
-
