--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,8 @@ requests==2.26.0
 python-dotenv==0.19.0
 werkzeug==2.0.1
 gunicorn==20.1.0
-# Fix the eventlet and dnspython compatibility issue
-eventlet==0.30.2
 dnspython==2.1.0
+eventlet==0.30.2  # Downgraded from 0.33.0
 pymongo==4.0.1
 redis==4.1.0
 bcrypt==3.2.0
