--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ requests==2.26.0
 python-dotenv==0.19.0
 werkzeug==2.0.1
 gunicorn==20.1.0
-# Fix the versions for eventlet and dnspython
+# Use compatible versions
 eventlet==0.30.2
-dnspython==2.1.0
+dnspython==1.16.0
 pymongo==4.0.1
 redis==4.1.0
 bcrypt==3.2.0
@@ -25,3 +25,4 @@ jinja2==3.0.1
 click==8.0.1
 six==1.16.0
 pytz==2021.3
+
