--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-flask==2.0.1
-flask-login==0.5.0
-flask-sqlalchemy==2.5.1
-sqlalchemy==1.4.23
-flask-migrate==3.1.0
-flask-socketio==5.1.1
-psycopg2-binary==2.9.1
-requests==2.26.0
-python-dotenv==0.19.0
-werkzeug==2.0.1
+Flask==2.3.2
+Flask-Login==0.6.2
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.5
+requests==2.31.0
+python-dotenv==1.0.0
 gunicorn==20.1.0
-# Use compatible versions
+psycopg2-binary==2.9.6
+WTForms==3.0.1
+flask-socketio==5.1.1
+sqlalchemy==1.4.23
 eventlet==0.30.2
 dnspython==1.16.0
 pymongo==4.0.1
@@ -17,7 +16,6 @@ redis==4.1.0
 bcrypt==3.2.0
 pyjwt==2.3.0
 flask-cors==3.0.10
-flask-wtf==1.0.0
 email-validator==1.1.3
 markupsafe==2.0.1
 itsdangerous==2.0.1
@@ -25,4 +23,3 @@ jinja2==3.0.1
 click==8.0.1
 six==1.16.0
 pytz==2021.3
-
