--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ flask-cors==3.0.10
 email-validator==1.1.3
 markupsafe==2.0.1
 itsdangerous==2.0.1
-jinja2==3.0.1
+# Update Jinja2 version to be compatible with Flask
+jinja2>=3.1.2
 click==8.0.1
 six==1.16.0
 pytz==2021.3
