--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,9 @@ pyjwt==2.3.0
 flask-cors==3.0.10
 email-validator==1.1.3
 markupsafe==2.0.1
-itsdangerous==2.0.1
-# Update Jinja2 version to be compatible with Flask
+# Update itsdangerous version to be compatible with Flask
+itsdangerous>=2.1.2
+# Ensure Jinja2 is compatible with Flask
 jinja2>=3.1.2
 click==8.0.1
 six==1.16.0
