--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,11 @@ bcrypt==3.2.0
 pyjwt==2.3.0
 flask-cors==3.0.10
 email-validator==1.1.3
-markupsafe==2.0.1
 # Update itsdangerous version to be compatible with Flask
 itsdangerous>=2.1.2
 # Ensure Jinja2 is compatible with Flask
 jinja2>=3.1.2
-click==8.1.3
+click==8.0.1
 six==1.16.0
 pytz==2021.3
+markupsafe>=2.1.1
