--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,25 @@
-Flask==2.3.2
-Flask-Login==0.6.2
-Flask-Migrate==4.0.4
-Flask-SQLAlchemy==3.0.5
-requests==2.31.0
-python-dotenv==1.0.0
-gunicorn==20.1.0
-psycopg2-binary==2.9.6
-WTForms==3.0.1
-flask-socketio==5.1.1
-sqlalchemy==1.4.23
-eventlet==0.30.2
-dnspython==1.16.0
-pymongo==4.0.1
-redis==4.1.0
-bcrypt==3.2.0
-pyjwt==2.3.0
-flask-cors==3.0.10
-email-validator==1.1.3
-# Update itsdangerous version to be compatible with Flask
-itsdangerous>=2.1.2
-# Ensure Jinja2 is compatible with Flask
-jinja2>=3.1.2
-click==8.0.1
-six==1.16.0
-pytz==2021.3
-markupsafe>=2.1.1
+Flask
+Flask-Login
+Flask-Migrate
+Flask-SQLAlchemy
+requests
+python-dotenv
+gunicorn
+psycopg2-binary
+WTForms
+flask-socketio
+sqlalchemy
+eventlet
+dnspython
+pymongo
+redis
+bcrypt
+pyjwt
+flask-cors
+email-validator
+itsdangerous
+jinja2
+click
+six
+pytz
+markupsafe
