--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 1 -b 0.0.0.0:$PORT wsgi:app
+    startCommand: PYTHONPATH=. gunicorn -w 1 -b 0.0.0.0:$PORT wsgi:app
     healthCheckPath: /health
     envVars:
       - key: FLASK_SECRET_KEY
@@ -55,7 +55,7 @@ services:
     env: python
     runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: python worker.py
+    startCommand: PYTHONPATH=. python worker.py
     envVars:
       - key: FLASK_SECRET_KEY
         generateValue: true
