--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ pyotp
 flask-wtf  # Required for FlaskForm in forms.py
 flask-bootstrap  # Optional, if Bootstrap is used in templates
 flask-mail  # Required for email functionality (e.g., password reset)
-flask-limiter  
+flask-limiter
+redis
+flask-limiter[redis]
