--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: crypto-market-app
     env: python
     runtime: python3.11
-    buildCommand: ./build.sh
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT wsgi:app
     healthCheckPath: /health
     static:
@@ -18,6 +18,8 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
+      - key: BINANCE_API_BASE_URL
+        value: https://data-api.binance.vision/api/v3
       - key: COINMARKETCAP_API_KEY
         sync: false
       - key: MAIL_SERVER
@@ -45,6 +47,10 @@ services:
         generateValue: true
       - key: FLASK_ENV
         value: production
+      - key: BINANCE_API_BASE_URL
+        value: https://data-api.binance.vision/api/v3
+      - key: BINANCE_WS_BASE_URL
+        value: wss://data-stream.binance.vision
       - key: COINMARKETCAP_API_KEY
         value: bda79d78-5f5c-41c3-892e-3584b698e234
       - key: COINMARKETCAP_API_URL
