--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     runtime: python3.11
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT wsgi:app
+    startCommand: gunicorn -w 4 -b 0.0.0.0:5000 wsgi:app
     healthCheckPath: /health
     static:
       - path: /static
@@ -34,6 +34,7 @@ services:
         sync: false
       - key: MAIL_DEFAULT_SENDER
         value: noreply@cryptomarket.example.com
+
 
   # Worker for background tasks (optional - if you need background processing)
   - type: worker
